# bot

./: Cargo.toml  README.md  config.example.toml  config.toml
src/: arbitrage.rs  config.rs  main.rs  market_selection.rs  polymarket.rs  price_utils.rs  ws_orderbook.rs
